--- a/index.html
+++ b/index.html
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <!-- Left Section -->
+        <div class="left-section">
+            <div class="logo">
+                <div class="logo-container">
+                    <img src="./img/logo.png">
+                </div>
+
+                <div class="text">
+                    <p>Burma Link Channel</p>
+                </div>
+            </div>
+            <div class="illustration">
+                <img src="./img/icon.svg" alt="Illustration">
+            </div>
+        </div>
+
+        <!-- Right Section (Sign In Box) -->
+        <div class="signin-container">
+            <h2>Admin Sign In</h2>
+
+            <div class="input-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" placeholder="">
+            </div>
+
+            <div class="input-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" placeholder="">
+            </div>
+
+            <div class="remember-me">
+                <input type="checkbox" id="remember-me">
+                <label for="remember-me">Remember Me</label>
+            </div>
+
+            <button class="btn">Sign In</button>
+
+            <div class="forgot-password">
+                <a href="#">Forget Password</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
